# contract_assistant

./: .gitignore  CONFIGURATION.md  Makefile  README.md  __init__.py  env.example  main.py  pyproject.toml
ca_core/: base.py  chunking.py  entities.py  exceptions.py  extract_ppocr.py  extract_pypdf.py  extraction.py  feedback.py  ner.py  ner_spacy.py  ner_spacy_archived.py  qa.py  registry.py  vectorstore.py
cli/: main.py  queries.md
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml
docker/entryshell_scripts/: litellm.sh  ollama.sh  tei.sh
tests/: test_config.py  test_ingestion.py
utility/: __init__.py  caching.py  config.py  config_utils.py  litellm.config.template.yaml  model_loader.py  render_litellm_config.py  session_state.py  utility.py
